# dune-nsimd

./: CMakeLists.txt  README  VERSION.md  config.h.cmake  dune-nsimd.pc.in  dune-vectorclass.pc.in  dune.module  nsimd.zip.sha1  vectorclass.zip.sha1
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/nsimd/: CMakeLists.txt  nsimd.hh  nsimdtest.cc
dune/nsimd/test/: CMakeLists.txt  multirhsperftest-AMG-nsimd.cc  multirhsperftest-jacobi-loop.cc  multirhsperftest-jacobi-nsimd.cc  multirhsperftest-jacobi-scalar.cc  multirhsperftest.hh  multirhstest.cc.in  multirhstest.hh.in  multirhstest_vector.cc.in  nsimdtest.cc.in  nsimdtest.hh.in  nsimdtest_mask.cc.in  nsimdtest_vector.cc.in
dune/nsimd/upstream/: changelog.txt  instrset.h  instrset_detect.cpp  nsimd.h  nsimd_common.h  vector_types.h  vectorclass.h  vectorf.h  vectorf128.h  vectorf256.h  vectorf256e.h  vectorf512.h  vectorf512e.h  vectori128.h  vectori256.h  vectori256e.h  vectori512.h  vectori512e.h  vectormath_common.h  vectormath_exp.h  vectormath_hyp.h  vectormath_lib.h  vectormath_trig.h
dune/vectorclass/: CMakeLists.txt  vectorclass.hh  vectorclasstest.cc
dune/vectorclass/test/: CMakeLists.txt  multirhsperftest-AMG-loop.cc  multirhsperftest-AMG-scalar.cc  multirhsperftest-AMG-vectorclass.cc  multirhsperftest-jacobi-vectorclass.cc  multirhsperftest.hh  multirhstest.cc.in  multirhstest.hh.in  multirhstest_vector.cc.in  vectorclasstest.cc.in  vectorclasstest.hh.in  vectorclasstest_mask.cc.in  vectorclasstest_vector.cc.in
scripts/: FindNSIMD.cmake
